# discord-census

./: .gitignore  .gitmodules  Cargo.toml  README.md
migrations/2021-04-06-225936_Init/: down.sql  up.sql
migrations/2021-04-08-235009_remove_invites_from_guild/: down.sql  up.sql
migrations/2021-04-09-005133_add_queue_invite/: down.sql  up.sql
migrations/2021-04-09-185937_add_recursion_level/: down.sql  up.sql
src/: config.rs  database.rs  discord.rs  main.rs  schema.rs  util.rs
